<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="14dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="14dp"
    android:layout_marginBottom="10dp"
    android:background="@color/card_bkg"
    android:elevation="8dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="10dp"
    tools:layout_editor_absoluteX="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:transitionName="img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/bottom_shadow"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/bottom_shadow"
            app:layout_constraintBottom_toTopOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progress_load_image"
            style="@android:style/Widget.Material.ProgressBar.Small.Title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/author"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/description"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="14sp"
            android:typeface="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/date"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
